<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/shep_sign_up"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DP10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F6E2E0"
                    android:hint="@string/fill_name"
                    android:inputType="text"
                    android:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DP10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F6E2E0"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textAllCaps="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/mar_radio_button"
                    android:padding="8dp"
                    android:text="@string/gender"
                    android:textColor="@color/red_400"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sign_up_rbtn_mention"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mar_radio_button"
                    android:shadowColor="@color/colorAccent"
                    android:text="@string/mention"
                    android:textColor="@color/red_400"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/sign_up_rbtn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mar_radio_button"
                    android:shadowColor="@color/colorAccent"
                    android:text="@string/female"
                    android:textColor="@color/red_400"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" />
            </RadioGroup>

            <TextView
                android:id="@+id/sign_up_tv_account_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DP20"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/SPsixteen"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn_sign_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/DP50"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sign_up_img_gallery"
        android:layout_width="@dimen/profile"
        android:layout_height="@dimen/profile"
        android:layout_marginTop="190dp"
        android:src="@drawable/profile"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>