<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.ConfirmRequestDialogFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/mar_dialog"
        android:layout_marginLeft="@dimen/mar_dialog"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginEnd="@dimen/mar_dialog"
        android:layout_marginRight="@dimen/mar_dialog"
        android:background="@drawable/btn_rounded_red"
        android:text="@string/confirmation"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/mar_dialog"
        android:layout_marginLeft="@dimen/mar_dialog"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginEnd="@dimen/mar_dialog"
        android:layout_marginRight="@dimen/mar_dialog"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_rounded_red"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirmation" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginStart="@dimen/mar_dialog"
        android:layout_marginLeft="@dimen/mar_dialog"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginEnd="@dimen/mar_dialog"
        android:layout_marginRight="@dimen/mar_dialog"
        android:layout_marginBottom="32dp"
        android:src="@drawable/confirm"
        app:layout_constraintBottom_toTopOf="@+id/tv_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mar_dialog"
        android:layout_marginLeft="@dimen/mar_dialog"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginEnd="@dimen/mar_dialog"
        android:layout_marginRight="@dimen/mar_dialog"
        android:text="@string/confirmation_message"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>